# panktikhata

./: .flake8  Makefile  README.md  panktikhata.pro  pyinstaller_build.py  pyproject.toml  requirements.txt
.github/workflows/: build_pyinstaller.yml  build_pyinstaller_linux.yml  build_pyinstaller_win.yml
panktikhata/: main.py  resources.qrc
panktikhata/assets/: resources.py
panktikhata/assets/app_icons/: panktikhata.aseprite
panktikhata/pankti/: keywords.py  runner.py  settings.py
panktikhata/themes/: defaultLight.py  defaultlight.py  syntaxclass.py
panktikhata/themes/syntaxstyle/: __init__.py  androidstudio.py  atom_one_dark.py  atom_one_light.py  dracula.py  far.py  github.py  github_dark.py  googlecode.py  grayscale.py  gruvbox_dark_medium.py  gruvbox_light_medium.py  monokai.py  night_owl.py  nord.py  obsidian.py  one_light.py  onedark.py  spacemacs.py  stackoverflow_dark.py  stackoverflow_light.py  tokyo_night_dark.py  tokyo_night_light.py  tomorrow_night_blue.py  vs.py  vs2015.py  xt256.py
panktikhata/ui/: aboutdlg.py  editor.py  helpdlg.py  highlighter.py  mainwin.py  settingsdlg.py
