[tool.poetry]
name = "panktikhata"
version = "0.1.0"
license = "MPL-2.0"
description = "Official IDE for Pankti Programming Language"
authors = ["Palash Bauri <palashbauri1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PySide6 = "^6.7.1"
pyinstaller = "^6.7.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.366"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
